Fix issue when building KCrash static

KCoreAddons forward declares a function from KCrash.

It contains a Q_DECL_IMPORT but that breaks when doing a static build.

Only add the Q_DECL_IMPORT when we are doing a dynamic build.

BUG: 440416